--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                             </div>
                         </div>
                         <div class="col-md-4">
-                            <div class="card" style="width: 100%;">
+                            <div class="card" style="width: 100%; height: 100%;">
                                 <img src="images\room5.jpg" class="card-img-top" alt="room1">
                                 <div class="card-body">
                                     <h5 class="card-title">Single Deluxe Room</h5>
