--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <div class="card" style="width: 100%;">
                             <img src="images\room2.jpg" class="card-img-top" alt="room1">
                             <div class="card-body">
-                                <h5 class="card-title">Single Deluxe Room</h5>
+                                <h5 class="card-title">Single  Luxury Room</h5>
                                 <p class="card-text">₦ 100,000 / <span class="yellow">Per Night</span></p>
                             </div>
                         </div>
@@ -85,7 +85,7 @@
                         <div class="card" style="width: 100%;">
                             <img src="images\room3.jpg" class="card-img-top" alt="room1">
                             <div class="card-body">
-                                <h5 class="card-title">Single Deluxe Room</h5>
+                                <h5 class="card-title">Double  Deluxe Room</h5>
                                 <p class="card-text">₦ 180,000 / <span class="yellow">Per Night</span></p>
                             </div>
                         </div>
@@ -108,16 +108,16 @@
                             <div class="card" style="width: 100%;">
                                 <img src="images\room4.jpg" class="card-img-top" alt="room1">
                                 <div class="card-body">
-                                    <h5 class="card-title">Single Deluxe Room</h5>
+                                    <h5 class="card-title">Double  Luxury Room</h5>
                                     <p class="card-text">₦ 200,000 / <span class="yellow">Per Night</span></p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-4">
-                            <div class="card" style="width: 100%; height: 100%;">
+                            <div class="card" style="width: 100%;">
                                 <img src="images\room5.jpg" class="card-img-top" alt="room1">
                                 <div class="card-body">
-                                    <h5 class="card-title">Single Deluxe Room</h5>
+                                    <h5 class="card-title">Single  Diamond Room</h5>
                                     <p class="card-text">₦ 250,000 / <span class="yellow">Per Night</span></p>
                                 </div>
                             </div>
@@ -126,7 +126,7 @@
                             <div class="card" style="width: 100%;">
                                 <img src="images\room6.jpg" class="card-img-top" alt="room1">
                                 <div class="card-body">
-                                    <h5 class="card-title">Single Deluxe Room</h5>
+                                    <h5 class="card-title">Double  Diamond Room</h5>
                                     <p class="card-text">₦ 280,000 / <span class="yellow">Per Night</span></p>
                                 </div>
                             </div>
